# LABSoft

./: .gitmodules  CMakeLists.txt  configure.ac
data/: default.labcalib  default.labcalibration
documentation/: manual.html
examples/: LABSoft_GUI_Fl_Input_Choice_With_Scroll.h  input-choice-with-scroll
learn/: 1-fltk-menu  1-fltk-menu.cpp  2-fltk-osc-disp  2-fltk-osc-disp.cpp  3-fltk-widget.cpp  4-fltk-input-choice  4-fltk-input-choice.cpp  5-fltk-flush  7-fltk-fl-run  7-fltk-fl-run.cpp  8-fltk-fl-choice-unit-scale.cpp  AD9833  Activity1.labcc  fltk-file-chooser.cpp  fltk-fl-choice  fltk-fl-choice.cpp  fltk-input-choice  fltk-native-file-chooser  main  main.cpp
learn/0-playground/: main  main.cpp
learn/1-rpi-pwm/: 1-rpi-pwm  1-rpi-pwm.cpp  Auxiliary.cpp  Auxiliary.h  Defaults.h  LAB_Core.cpp  LAB_Core.h
learn/2. ads9883/: AD9833  AD9833.cpp
learn/2. ads9883 pigpio/: AD9833  AD9833.cpp
learn/3-aux-spi-test/: 3-aux-spi-test  Auxiliary.cpp  Defaults.h  LAB_Core.cpp  LAB_Core_Defs.h  main.cpp
learn/3. ads9883 pigpio bb/: AD9833  AD9833.cpp
learn/4-sp1-pigpio/: main  main.cpp
learn/4. pigpio spi bb test/: main  main.cpp
learn/5-aux-spi-test/: 5-aux-spi-test  Auxiliary.cpp  Auxiliary.h  Defaults.h  LAB_Core.cpp  LAB_Core.h  LAB_Core_Defs.h  ValueStruct.h  main.cpp
learn/6-lab-problem1/: 6-lab-problem1  main.cpp
learn/7-logic-analyzer-dma/: 7-logic-analyzer-dma  7-logic-analyzer-dma.cpp  7-logic-analyzer-dmaclear
learn/8-FINAL-spi-using-dma/: 8-FINAL-spi-using-dma.cpp  main
learn/LABSoft_Oscilloscope_Display/: 2-fltk-osc-disp.cpp
learn/LabelValue/: LAB.cpp  LAB.h  LabelValue.cpp  LabelValue.h  LabelValue_Controller.cpp  LabelValue_Controller.h  LabelValue_GUI.cpp  LabelValue_GUI.fl  LabelValue_GUI.h  LabelValue_Test  LabelValue_Test.cpp  LabelValue_Test.h  main  main.cpp
learn/ads7883-spi/: ads7883-spi  ads7883-spi.cpp
learn/spi-dma-lab-core/: Auxiliary.h  Channel_Signal.cpp  Channel_Signal.h  Defaults.h  LAB_Core.cpp  LAB_Core.h  LAB_Oscilloscope.cpp  LAB_Oscilloscope.h  spi-dma-lab-core  spi-dma-lab-core.cpp
learn/spi-lab-core/: Auxiliary.h  Defaults.h  LAB_Core.cpp  LAB_Core.h  spi-lab-core  spi-lab-core.cpp
learn/unsorted/: 3-fltk-widget  3-fltk-widget.cpp  4-fltk-input-choice.cpp  5-fltk-flush.cpp  6-fltk-fl-choice  6-fltk-fl-choice.cpp  AD9833.cpp  Activity1-badfile.labcc  fltk-file-chooser  fltk-input-choice.cpp  fltk-native-file-chooser.cpp  read-xml  read-xml.cpp
lib/AD9833/: AD9833.cpp  AD9833.h
lib/MCP23S17/: MCP23S17.cpp  MCP23S17.h
src/: Activity1.labcc  AikaPi.cpp  AikaPi.h  Auxiliary.cpp  Auxiliary.h  ChannelSignals.cpp  ChannelSignals.h  Channel_Signal.cpp  Channel_Signal.h  Channel_Signals.cpp  Channel_Signals.h  Defaults.cpp  Defaults.h  Globals.cpp  Globals.h  LAB.cpp  LAB.h  LABChecker  LABChecker.cxx  LABChecker.h  LABChecker_GUI_Digital_Output_Table.cpp  LABChecker_GUI_Digital_Output_Table.h  LABSoft  LABSoft.cpp  LABSoft.h  LABSoft.txt  LABSoftApp.cpp  LABSoftApp.h  LABSoftAppWindow.cpp  LABSoftAppWindow.h  LABSoftGlobals.h  LABSoftOscDisplay.cpp  LABSoftOscDisplay.h  LABSoft_Controller.cpp  LABSoft_Controller.h  LABSoft_Controller_Ammeter.cpp  LABSoft_Controller_Ammeter.h  LABSoft_Controller_Circuit_Checker.cpp  LABSoft_Controller_Circuit_Checker.h  LABSoft_Controller_Digital_Circuit_Checker.cpp  (+90 more)
src/Circuit Checker Files/: LABChecker.cpp  LABChecker.h  LABChecker_GUI.cpp  LABChecker_GUI.fl  checker.labcc  checker2.labcc  checker3.labcc  main.cpp  table_test.cpp
src/LAB/: LAB.cpp  LAB.h  LAB_Circuit_Checker.cpp  LAB_Circuit_Checker.h  LAB_Core.cpp  LAB_Core.h  LAB_Digital_Circuit_Checker.cpp  LAB_Digital_Circuit_Checker.h  LAB_Function_Generator.cpp  LAB_Function_Generator.h  LAB_LABChecker_Digital.cpp  LAB_LABChecker_Digital.h  LAB_Logic_Analyzer.cpp  LAB_Logic_Analyzer.h  LAB_Module.cpp  LAB_Module.h  LAB_Ohmmeter.cpp  LAB_Ohmmeter.h  LAB_Oscilloscope.cpp  LAB_Oscilloscope.h  LAB_Oscilloscope_Trigger.cpp  LAB_Oscilloscope_Trigger.h  LAB_Voltmeter.cpp  LAB_Voltmeter.h
src/LAB Checker/: LABChecker.cpp  LABChecker.h  LABChecker_Controller.h  LABChecker_GUI.cxx  LABChecker_GUI.fl  LABChecker_GUI.h  main.cpp
src/LABChecker/: LABChecker  LABChecker_Controller.cpp  LABChecker_Controller.h  LABChecker_GUI.cpp  LABChecker_GUI.fl  LABChecker_GUI.h  LABChecker_GUI_Digital_Input_Table.cpp  LABChecker_GUI_Digital_Input_Table.h  LABChecker_Main.cpp  LABChecker_Main.h  ccfile.xml  checker.labcc  main.cpp  table_test  test_openssl.labcc
src/LABSoft_Controller/: LABSoft_Controller.cpp  LABSoft_Controller.h  LABSoft_Controller_Circuit_Checker.cpp  LABSoft_Controller_Circuit_Checker.h  LABSoft_Controller_Digital_Circuit_Checker.cpp  LABSoft_Controller_Digital_Circuit_Checker.h  LABSoft_Controller_Exporter.cpp  LABSoft_Controller_Exporter.h  LABSoft_Controller_Function_Generator.cpp  LABSoft_Controller_Function_Generator.h  LABSoft_Controller_LABChecker_Digital.cpp  LABSoft_Controller_LABChecker_Digital.h  LABSoft_Controller_Logic_Analyzer.cpp  LABSoft_Controller_Logic_Analyzer.h  LABSoft_Controller_Main_Window.cpp  LABSoft_Controller_Main_Window.h  LABSoft_Controller_Oscilloscope.cpp  LABSoft_Controller_Oscilloscope.h  LABSoft_Controller_Unit.cpp  LABSoft_Controller_Unit.h  LABSoft_Controller_Voltmeter.cpp  LABSoft_Controller_Voltmeter.h
src/LABSoft_GUI/: LABSoft_GUI.cpp  LABSoft_GUI.fl  LABSoft_GUI.h  LABSoft_GUI_Fl_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Choice_With_Scroll.h  LABSoft_GUI_Fl_Input_Choice_With_Scroll.cpp  LABSoft_GUI_Fl_Input_Choice_With_Scroll.h  LABSoft_GUI_Fl_Slider.cpp  LABSoft_GUI_Logic_Analyzer_Add_Channel_Signal_Window.cpp  LABSoft_GUI_Logic_Analyzer_Channel_Button.cpp  LABSoft_GUI_Logic_Analyzer_Channel_Button.fl  LABSoft_GUI_Logic_Analyzer_Channel_Button.h  LABSoft_GUI_Logic_Analyzer_Display.cpp  LABSoft_GUI_Logic_Analyzer_Display.h  (+16 more)
streaming-main/: rpi_adc_stream  rpi_adc_stream.c  rpi_dma_utils.h  rpi_opengl_graph
test/: main  main.cpp
tests/: LABSoft_GUI_Fl_Input_Choice_With_Scroll.cpp  input-choice-with-scroll.cpp
ui/: lab.glade  lab.glade~  lab.ui~  playground.glade  playground.glade~
(+76 files in other folders)
